<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView android:text="@string/welcome"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/upload_previous_line"
        android:id="@+id/uploadconfirmbutton"
        android:width="250dp"
        android:height="100dp"
        android:textSize="20sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_lines"
        android:id="@+id/recentsbutton"
        android:width="250dp"
        android:height="100dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/uploadconfirmbutton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_lines"
        android:id="@+id/addnewbutton"
        android:width="250dp"
        android:height="100dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recentsbutton"/>
</RelativeLayout>
