<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cumakerspace.lighthouse.MainActivity.njtransit_config">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_text"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:id="@+id/from_text"/>


    <Spinner
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/fromspinner"
        android:layout_below="@+id/from_text">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_text"
        android:textSize="20sp"
        android:id="@+id/to_text"
        android:layout_below="@+id/fromspinner"/>

    <Spinner
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/tospinner"
        android:layout_below="@+id/to_text">
    </Spinner>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/schedules_listView"
        android:layout_below="@+id/tospinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/show_schedules_text"
        android:id="@+id/showschedules_button"
        android:layout_below="@+id/tospinner"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
